@@ -51,44 +51,7 @@
     * Provides API to create child threads with a pipe (PAIR socket) to talk
     to them.
 @discuss
-    This class is an example of how to create a thread-safe object using
-    0MQ. Actually it's a little more work than it sounded at first. Let's
-    start by agreeing on the problem here. We have a context wrapper, zctx,
-    which does some neat work for us such as managing sockets automatically
-    so we can just shut down without having to manually close each and
-    every damn socket. All good, until we need to build a multithreaded
-    application. Which is about 80% of interesting 0MQ applications. It is
-    not safe to share a single object from multiple threads. They'll try to
-    mess with the data structures concurrently, and it'll break nastily.
-
-    OK, the classic solution would be exclusion using semaphores, critical
-    sections, etc. We're 0MQ fanatics so that's not even an option. Instead,
-    we want to eat our own dogfood and do this using 0MQ.
-
-    The basic concept, which you'll see in this class, is that the real work
-    is not done by the object we own, but by a separate object, running in
-    its own thread. I call this the "agent". This is a nice pattern, and we
-    see it in a few places, such as the flcliapi example from the Guide.
-
-    The slight difficulty here is bootstrapping. We have a separate agent
-    thread, which we talk to over inproc, and which manages our context and
-    sockets. This is problem number one, I'll get to problem two in a sec.
-
-    Part of zctx's magic is delaying the zmq_init call until it's really
-    needed. This lets us first configure iothreads if needed. It's the agent
-    that will create the 0MQ context by calling zmq_init. However we need
-    sockets to talk to the agent. Solution: use two contexts, one for the
-    pipes to/from the agent, and one for the application itself. Not many
-    0MQ applications create multiple contexts, but it's a valid and useful
-    technique.
-
-    So we create a private context, two sockets, and then we pass one of
-    those sockets to the agent. We can then talk to the agent by sending
-    simple commands like IOTHREADS=100, SOCKET, CLOSE=0xff33344, and
-    TERMINATE. BTW, do not set IOTHREADS to 100, that is insane. Anything
-    above 1 is actually insane unless you know what you're doing.
-
-    Next problem is when our application needs child threads. If we simply
+    One problem is when our application needs child threads. If we simply
     use pthreads_create() we're faced with several issues. First, it's not
     portable to legacy OSes like win32. Second, how can a child thread get
     access to our zctx object? If we just pass it around, we'll end up
@@ -114,12 +77,6 @@
     more enriching experience for all involved. One thing I do often is use
     a PAIR-PAIR pipe to talk from a thread to/from its parent. So this class
     will automatically create such a pair for each thread you start.
-
-    That's it. We have a multithreaded class that is thread safe and also
-    gives you major power for creating multithreaded applications, with a
-    really simple API.
-
-    Now that's what I call a language binding.
 @end
 */
 
@@ -132,108 +89,12 @@
 //  Structure of our class
 
 struct _zctx_t {
-    //  This is the agent thread we create
-    pthread_t agent;
-    //  Generated endpoint means we can have many zctx instances
-    char endpoint [64];
-    //  Private context used between us and agent
-    void *context;
-    //  This is the socket we use to talk to the agent thread
-    void *pipe;
+    void *context;              //  Our 0MQ context
+    zlist_t *sockets;           //  Sockets held by this thread
+    Bool main;                  //  TRUE if we're the main thread
+    int iothreads;              //  Number of IO threads, default 1
+    int linger;                 //  Linger timeout, default 0
 };
-
-
-//  ---------------------------------------------------------------------
-//  Context agent
-//  This thread does the real work of creating and destroying sockets.
-//  It accepts the following string requests over its inproc socket:
-//
-//    IOTHREADS=%d   Set iothreads to specified threads
-//    LINGER=%d      Set linger to specified msecs
-//    SOCKET=%d      Create socket of specified type, reply="%p"
-//    CLOSE=%p       Close specified socket
-//    TERMINATE      Destroy sockets, terminate context
-
-static void *
-agent_thread (void *pipe)
-{
-    zlist_t *sockets;           //  List of registered sockets
-    void *context = NULL;       //  Context for applications
-    int iothreads = 1;          //  Number of io threads for zmq_init
-    int linger = 0;             //  Linger setting
-    Bool terminated = FALSE;
-
-    //  Initialize agent
-    sockets = zlist_new ();
-
-    while (!terminated) {
-        //  ROUTER socket gives us two frames, [address] [request]
-        zframe_t *address = zframe_recv (pipe);
-        assert (zframe_more (address));
-        //  Read command as string
-        char *command = zstr_recv (pipe);
-        char *value = strchr (command, '=');
-        if (value)
-            *value++ = 0;
-
-        if (streq (command, "IOTHREADS")) {
-            assert (value);
-            iothreads = atoi (value);
-        }
-        else
-        if (streq (command, "LINGER")) {
-            assert (value);
-            linger = atoi (value);
-        }
-        else
-        if (streq (command, "SOCKET")) {
-            assert (value);
-            //  Initialize context now if necessary
-            if (context == NULL)
-                context = zmq_init (iothreads);
-            assert (context);
-            //  Create and register socket
-            void *socket = zmq_socket (context, atoi (value));
-            assert (socket);
-            zlist_push (sockets, socket);
-            //  Return socket reference to caller
-            zframe_send (&address, pipe, ZFRAME_MORE);
-            zstr_sendf (pipe, "%p", socket);
-        }
-        else
-        if (streq (command, "CLOSE")) {
-            assert (value);
-            void *socket;
-            int rc = sscanf (value, "%p", &socket);
-            assert (rc == 1);
-            zmq_setsockopt (socket, ZMQ_LINGER, &linger, sizeof (int));
-            zmq_close (socket);
-            zlist_remove (sockets, socket);
-        }
-        else
-        if (streq (command, "TERMINATE")) {
-            while (zlist_size (sockets)) {
-                void *socket = zlist_first (sockets);
-                zmq_setsockopt (socket, ZMQ_LINGER, &linger, sizeof (int));
-                zmq_close (socket);
-                zlist_remove (sockets, socket);
-            }
-            zlist_destroy (&sockets);
-            if (context)
-                zmq_term (context);
-            terminated = TRUE;
-        }
-        else {
-            fprintf (stderr, "E: bad command (%s)\n", command);
-            assert (0);
-        }
-        free (command);
-        zframe_destroy (&address);
-    }
-    //  Terminate agent
-    zmq_close (pipe);
-    return NULL;
-}
 
 
 //  ---------------------------------------------------------------------
@@ -258,21 +119,9 @@ zctx_new (void)
         *self;
 
     self = (zctx_t *) zmalloc (sizeof (zctx_t));
-    self->context = zmq_init (1);
-    int rc = snprintf (self->endpoint, sizeof (self->endpoint),
-        "inproc://zctx-pipe-%p", self->context);
-    assert (rc < sizeof (self->endpoint));
-
-    //  Create bound socket and pass it to agent
-    void *remote = zmq_socket (self->context, ZMQ_ROUTER);
-    rc = zmq_bind (remote, self->endpoint);
-    assert (rc == 0);
-    pthread_create (&self->agent, NULL, agent_thread, remote);
-
-    //  Now connect ourselves to that endpoint
-    self->pipe = zmq_socket (self->context, ZMQ_DEALER);
-    rc = zmq_connect (self->pipe, self->endpoint);
-    assert (rc == 0);
+    self->sockets = zlist_new ();
+    self->iothreads = 1;
+    self->main = TRUE;
 
     //  Install signal handler for SIGINT and SIGTERM
     struct sigaction action;
@@ -295,15 +144,15 @@ zctx_destroy (zctx_t **self_p)
     assert (self_p);
     if (*self_p) {
         zctx_t *self = *self_p;
-        //  The main context has an agent, child threads don't
-        if (self->agent) {
-            zstr_sendf (self->pipe, "TERMINATE");
-            pthread_join (self->agent, NULL);
+        while (zlist_size (self->sockets)) {
+            void *socket = zlist_first (self->sockets);
+            zmq_setsockopt (socket, ZMQ_LINGER, &self->linger, sizeof (int));
+            zmq_close (socket);
+            zlist_remove (self->sockets, socket);
         }
-        zmq_close (self->pipe);
-        if (self->agent)
+        zlist_destroy (&self->sockets);
+        if (self->main && self->context)
             zmq_term (self->context);
-
         free (self);
         *self_p = NULL;
     }
@@ -319,7 +168,7 @@ void
 zctx_set_iothreads (zctx_t *self, int iothreads)
 {
     assert (self);
-    zstr_sendf (self->pipe, "IOTHREADS=%d", iothreads);
+    self->iothreads = iothreads;
 }
 
 
@@ -332,7 +181,44 @@ void
 zctx_set_linger (zctx_t *self, int linger)
 {
     assert (self);
-    zstr_sendf (self->pipe, "LINGER=%d", linger);
+    self->linger = linger;
+}
+
+
+//  --------------------------------------------------------------------------
+//  Create new 0MQ socket and register for this context. Use this instead of
+//  the 0MQ core API method if you want automatic management of the socket
+//  at shutdown. If the context has not yet been initialized, this method will
+//  initialize it.
+
+void *
+zctx_socket_new (zctx_t *self, int type)
+{
+    assert (self);
+    //  Initialize context now if necessary
+    if (self->context == NULL)
+        self->context = zmq_init (self->iothreads);
+    assert (self->context);
+    //  Create and register socket
+    void *socket = zmq_socket (self->context, type);
+    assert (socket);
+    zlist_push (self->sockets, socket);
+    return socket;
+}
+
+
+//  --------------------------------------------------------------------------
+//  Destroy the socket. You must use this for any socket created via the
+//  zctx_socket_new method.
+
+void
+zctx_socket_destroy (zctx_t *self, void *socket)
+{
+    assert (self);
+    assert (socket);
+    zmq_setsockopt (socket, ZMQ_LINGER, &self->linger, sizeof (int));
+    zmq_close (socket);
+    zlist_remove (self->sockets, socket);
 }
 
 
@@ -398,24 +284,19 @@ zctx_thread_new (zctx_t *self, void *(*thread_fn) (void *), void *arg)
     //  This is what we're going to pass to the child thread
     zthread_t *args = (zthread_t *) zmalloc (sizeof (zthread_t));
     args->arg = arg;
+    args->pipe = zctx_socket_new (self, ZMQ_PAIR);
+    args->ctx = (zctx_t *) zmalloc (sizeof (zctx_t));
+    args->ctx->context = self->context;
+    args->ctx->sockets = zlist_new ();
 
     //  Create pipe from our thread to child
     void *pipe = zctx_socket_new (self, ZMQ_PAIR);
-    args->pipe = zctx_socket_new (self, ZMQ_PAIR);
     char endpoint [64];
     int rc = snprintf (endpoint, 64, "inproc://zctx-pipe-%p", pipe);
     assert (rc < 64);
     rc = zmq_bind (pipe, endpoint);
     assert (rc == 0);
     rc = zmq_connect (args->pipe, endpoint);
-    assert (rc == 0);
-
-    //  Create clone of ourselves, for safe use by child thread
-    //  We're going to create a new pipe through to the agent
-    args->ctx = (zctx_t *) zmalloc (sizeof (zctx_t));
-    args->ctx->context = self;
-    args->ctx->pipe = zmq_socket (self->context, ZMQ_DEALER);
-    rc = zmq_connect (args->ctx->pipe, self->endpoint);
     assert (rc == 0);
 
     //  Now start child thread, passing our arguments
@@ -446,39 +327,6 @@ zctx_thread_new (zctx_t *self, void *(*thread_fn) (void *), void *arg)
 #endif
 
     return pipe;
-}
-
-
-//  --------------------------------------------------------------------------
-//  Create new 0MQ socket and register for this context. Use this instead of
-//  the 0MQ core API method if you want automatic management of the socket
-//  at shutdown. If the context has not yet been initialized, this method will
-//  initialize it.
-
-void *
-zctx_socket_new (zctx_t *self, int type)
-{
-    assert (self);
-    zstr_sendf (self->pipe, "SOCKET=%d", type);
-    char *reply = zstr_recv (self->pipe);
-    void *socket;
-    int rc = sscanf (reply, "%p", &socket);
-    assert (rc == 1);
-    free (reply);
-    return socket;
-}
-
-
-//  --------------------------------------------------------------------------
-//  Destroy the socket. You must use this for any socket created via the
-//  zctx_socket_new method.
-
-void
-zctx_socket_destroy (zctx_t *self, void *socket)
-{
-    assert (self);
-    assert (socket);
-    zstr_sendf (self->pipe, "CLOSE=%p", socket);
 }
 
 
